# swagger/link.swagger.yml
@@ -5,24 +5,25 @@ paths:
         - Link
       summary: 링크 데이터 가져오기
       description: |
-          만약 조건(zip, user의 ID값)에 해당하는 값이 없더라도 오류 처리 하지 않고 빈 배열을 반환합니다.
-          응답 데이터 중 thumb값은 해당 사이트에서 따로 설정해둔 이미지가 없을 경우 null로 설정됩니다. 
+        만약 조건(zip, user의 ID값)에 해당하는 값이 없더라도 오류 처리 하지 않고 빈 배열을 반환합니다.
+        응답 데이터 중 thumb값은 해당 사이트에서 따로 설정해둔 이미지가 없을 경우 null로 설정됩니다. 
       parameters:
         - name: zip_id
           in: path
           description: '링크가 속한 zip의 id값을 파라미터로 넘겨야 합니다.'
           required: true
-          schema:
-            type: integer
-            format: int32
-            example: 1
+          type: integer
+          format: int32
         - name: tag
           in: query
           description: 'tag값이 link인 경우 link인 값들만 호출, text인 경우 text인 값들만 호출, 설정하지 않은 경우 모든 링크 데이터를 호출'
           required: false
-          schema:
-            type: string
-            example: 'link'
+          type: string
+        - name: sortOrder
+          in: query
+          description: '데이터를 정렬하는 기준을 설정합니다. 가능한 값: newest, oldest, alphabetical, most_visited'
+          required: false
+          type: string
       responses:
         200:
           description: 링크 데이터가 성공적으로 호출된 경우
@@ -129,6 +130,7 @@ paths:
               message:
                 type: string
                 example: "서버 에러, 관리자에게 문의 바랍니다."
+
               
   /link/get_link/{link_id}:
     get:
@@ -145,7 +147,6 @@ paths:
           required: true
           schema:
             type: integer
-            format: int32
             example: 1
       responses:
         200:
@@ -503,7 +504,6 @@ paths:
           required: true
           schema:
             type: integer
-            format: int32
             example: 1
       responses:
         200:
@@ -571,7 +571,6 @@ paths:
           required: true
           schema:
             type: integer
-            format: int32
             example: 1
       responses:
         200:
@@ -636,7 +635,6 @@ paths:
           required: true
           schema:
             type: integer
-            format: int32
             example: 1
         - name: new_zip_id
           in: path
@@ -644,7 +642,6 @@ paths:
           required: true
           schema:
             type: integer
-            format: int32
             example: 2
       responses:
         200:
@@ -821,7 +818,6 @@ paths:
           required: true
           schema:
             type: integer
-            format: int32
             example: 1
       responses:
         200:
